<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".SplashActivity">


    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="78dp"
        android:autofillHints="password"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/LightGrey"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="101dp"
        android:autofillHints="emailAddress"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/note_bg_layout"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="101dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:text="@string/first_name"
        android:textAlignment="center"
        android:textColor="@color/LightGrey"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="101dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:text="@string/last_name"
        android:textAlignment="center"
        android:textColor="@color/LightGrey"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

</androidx.constraintlayout.widget.ConstraintLayout>