<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".SplashActivity">


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="101dp"
        android:autofillHints="password"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/LightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="101dp"
        android:autofillHints="emailAddress"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/LightGrey"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="203dp"
        android:background="@drawable/note_bg_layout"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_up"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="203dp"
        android:background="@drawable/note_bg_layout"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>